--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.5.14",
     "morgan": "~1.9.0",
